# CloudmusicNoNCM

./: .gitignore  CMakeLists.txt  CMakeMypkg.cmake  CMakePresets.json
cmake/: ZQFPackages.cmake
src/: CMakeLists.txt
src/loader/: CMakeLists.txt  main.cpp
src/payload/: CMakeLists.txt  dllmain.cpp
